--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Lab1</string>
+    <string name="button">CLICK</string>
+    <string name="click_on_this_button">CLICK ON THIS BUTTON</string>
 </resources>
